--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ main {
   display: flex;
   width: 100%;
   margin-top: 20px;
+  background-color: #e7f9fd;
+  border-radius: 50px;
 }
 
 .card {
@@ -70,23 +72,25 @@ main {
 }
 
 .text h1 {
+  width: 500px;
   font-size: 55px;
   margin-bottom: 25px;
 }
 
 .text p {
+  width: 500px;
   margin-top: 35px;
   font-size: 18px;
 }
 
 .Recipes-1 {
-  /* width: 700px; */
+  width: 100%;
   padding: 40px;
-  background-color: #e7f9fd;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  justify-content: space-between;
+  /* background-color: #e7f9fd; */
 }
-.sauce-plate {
+.sauce-plate img {
+  width: 300px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -111,7 +115,7 @@ main {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 130px;
+  margin-top: 50px;
   gap: 10px;
 }
 button {
