--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ hr {
 
 main {
   display: flex;
-  width: 100%;
+  /* width: 100%; */
   margin-top: 20px;
   background-color: #e7f9fd;
   border-radius: 50px;
@@ -89,8 +89,11 @@ main {
   justify-content: space-between;
   /* background-color: #e7f9fd; */
 }
+.sauce-plate {
+  width: 100%;
+}
 .sauce-plate img {
-  width: 300px;
+  width: 600px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -183,7 +186,7 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  max-width: 100%;
   text-align: center;
 }
 .simple-test h1 {
@@ -200,13 +203,12 @@ button {
 }
 
 .images {
-  width: 100%;
   padding: 40px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
 .images img {
-  width: 400px;
+  width: 300px;
   padding: 20px;
 }
 
