--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 100%;
+  width: 100%;
   text-align: center;
 }
 .simple-test h1 {
@@ -208,7 +208,7 @@ button {
   grid-template-columns: repeat(3, 1fr);
 }
 .images img {
-  width: 300px;
+  width: 400px;
   padding: 20px;
 }
 
@@ -245,4 +245,46 @@ button {
   background: black;
   padding: 15px 20px;
   margin-top: 70px;
+}
+.foodieland {
+  background: #e7f9fd;
+}
+.foodie-test {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  padding: 40px;
+}
+
+.foodie-test h1 {
+  line-height: 2;
+}
+.foodie-test p {
+  width: 700px;
+}
+.ig-images {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  width: 400px;
+  padding: 40px;
+}
+.foodieland button {
+  border-radius: 10px;
+  color: white;
+  font-size: 15px;
+  background: black;
+  padding: 15px 20px;
+  display: inline-block;
+}
+.btn-ig {
+  text-align: center;
+  justify-content: center;
+}
+.foodieland .bx {
+  font-size: 20px;
+  align-items: center;
 }
